Fixed Plaza Upload, begin DocuTrac conversion
The Plaza upload wasn't working because we weren't adding back a cookie
to the collection so wasn't validating upload. Now confirmed works. Also
since both PRMG and Plaza use DocuTrac, working toward common classes.

--- a/ProcessorsToolkit.csproj
+++ b/ProcessorsToolkit.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Model\BorrDirWatcher.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Model\Common.UploadSession\DocuTracConnection.cs" />
     <Compile Include="Model\Common.UploadSession\MultipartUploadForm.cs" />
     <Compile Include="Model\EventArgs.cs" />
     <Compile Include="Model\FannieData.cs" />
